- Fixed the form being marked as complete when a partial entry is saved.