@@ -3,7 +3,7 @@
 Plugin Name: Gravity Flow Checklists
 Plugin URI: https://gravityflow.io
 Description: Checklists Extension for Gravity Flow.
-Version: 1.2.1-dev
+Version: 1.2.2-dev
 Author: Gravity Flow
 Author URI: https://gravityflow.io
 License: GPL-2.0+
@@ -25,7 +25,7 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
-define( 'GRAVITY_FLOW_CHECKLISTS_VERSION', '1.2.1-dev' );
+define( 'GRAVITY_FLOW_CHECKLISTS_VERSION', '1.2.2-dev' );
 define( 'GRAVITY_FLOW_CHECKLISTS_EDD_ITEM_ID', '9778' );
 define( 'GRAVITY_FLOW_CHECKLISTS_EDD_ITEM_NAME', 'Checklists' );
 
